--- a/HTML/index.html
+++ b/HTML/index.html
@@ -25,8 +25,12 @@
             <div class="bsleft"></div>
             <img src="images/büroservice.JPG" alt="Büroservice Illu" class="bserviceBild">
             <div class="bsright"></div>
-            <h2>Büroservice</h2>
-            <p>Ich unterstütze Sie bei der Organisation im Büro, damit die Ordnung bei stärkerer Auftragslage nicht benachteiligt wird. Darüberhinaus übernehme ich die Kommunikation mit dem Telefon um unwichtiges von unwichtigem zu trennen und Ihre Produktivtät zu steigern.</p>
+            <h2>Büroservice / Buchhaltung</h2>
+                <li>Geschäftsadresse/Postanschrift</li>
+                <li>Digitalisierung</li>
+                <li>Belege sortieren/buchen</li>
+                <li>Umsatzsteuervoranmeldung</li>
+                <li>Zuarbeitung Steuerberater</li>
         </div>
         <div class="tservice-container">
                 <div class="tsright"></div>
@@ -54,6 +58,5 @@
                 <li>Impressum</li>
         </div>
     </div>
-
 </body>
 </html>
