--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,13 +10,16 @@
 
 
 <body>
-    <div class="container">
-            <div class="header">     
+    <header id="Test">     
                 <img src="images/phoneIcon.png" alt="TobisOffice IconPhone" class="phoneIcon">
                 <p>+49 176 30453831</p>
-                <img src="images/menuIcon.png" alt="TobisOffice IconPhone" class="menuIcon">
+                <nav>
+                        <img src="images/menuIcon.png" alt="TobisOffice IconPhone" class="menuIcon">
+                </nav>
                       
-            </div>
+    </header>
+    <div class="container">
+           
         <div class="start-container">
             <img src="images/logo.JPG" alt="TobisOffice Logo" class="logo">
             <h1>Buchhaltungs- und Büroservice</h1>
@@ -62,5 +65,25 @@
                 <li>Impressum</li>
         </div>
     </div>
+
+
+    <script>
+    window.onscroll = function() {myFunction()};
+
+// Get the header
+var header = document.getElementById("Test")
+
+// Get the offset position of the navbar
+var sticky = header.offsetTop;
+
+// Add the sticky class to the header when you reach its scroll position. Remove "sticky" when you leave the scroll position
+function myFunction() {
+  if (window.pageYOffset > sticky) {
+    header.classList.add("sticky");
+        } else {
+    header.classList.remove("sticky");
+        }
+    }
+    </script>
 </body>
 </html>
