--- a/HTML/index.html
+++ b/HTML/index.html
@@ -11,7 +11,7 @@
 
 
 <body>
-    <nav id="myTopnav">
+    <nav class="topnav" id="myTopnav">
         <ul>
             <li class="telefonnummer"><a>+49 176 30453831</a></li>
             <li><a href ="#" class="LeistungenNav">Leistungen</a></li>
@@ -72,7 +72,7 @@
 
 
     <script>
-/*
+
     function myFunctionNav() {
 
     var x = document.getElementById("myTopnav");
@@ -82,7 +82,7 @@
             x.className = "topnav";
         }
     }
-*/
+
 
     window.onscroll = function() {myFunction()};
     // Get the header
