--- a/HTML/index.html
+++ b/HTML/index.html
@@ -12,15 +12,22 @@
 
 <body>
     <nav class="topnav" id="myTopnav">
-        <ul>
-            <li class="telefonnummer"><a>+49 176 30453831</a></li>
-            <li><a href ="#" class="LeistungenNav">Leistungen</a></li>
-            <li><a href ="#" class="PreiseNav">Preise</a></li>
-            <li><a href ="#" class="KontaktNav">Kontakt</a></li>
-        </ul>
-        <a href="javascript:void(0);" class="icon" onclick="myFunctionNav() ">
-                <i class="fa fa-bars"></i>
-        </a>
+        <div class="bild">
+                <li><img src="images/phoneIcon.png" alt=""></li>
+
+        </div>
+        <div class="content">
+                <ul>
+                        <li class="telefonnummer"><a>+49 176 30453831</a></li>
+                        <li><a href ="#" class="LeistungenNav">Leistungen</a></li>
+                        <li><a href ="#" class="PreiseNav">Preise</a></li>
+                        <li><a href ="#" class="KontaktNav">Kontakt</a></li>
+                    </ul>
+                    <a href="javascript:void(0);" class="icon" onclick="myFunctionNav() ">
+                            <i class="fa fa-bars"></i>
+                    </a>
+        </div>
+       
 
     </nav>
 
