--- a/HTML/index.html
+++ b/HTML/index.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="topnav" id="myTopnav">
         <div class="bild">
-                <li><img src="images/phoneIcon.png" alt=""></li>
+                <img src="images/phoneIcon.png" alt="">
 
         </div>
         <div class="content">
