--- a/HTML/index.html
+++ b/HTML/index.html
@@ -22,7 +22,7 @@
 
         <nav id="main-nav">
             <ul>
-                <li><a href="#">Leistungen</a></li>
+                <li><a href="#">Leistungen</a>
                 <li><a href="#">Preise</a></li>
                 <li><a href="#">Kontakt</a></li>
             </ul>
@@ -64,6 +64,20 @@
         <h2>Inidviduelles Kennlerngespräch</h2>
         <button>Hier vereinbaren</button>
     </section>
+
+ <section id="footer">
+
+    <ul id="Copyright">
+        <li><a href="#"> © Copyright TobisOffice</a></li>
+    </ul>
+
+     <ul id="rechtliches">
+        <li><a href="#">Datenschutz</a></li>
+        <li><a href="#">Impressum</a></li>
+     </ul>
+     
+ </section>
+
 
 
 
