--- a/HTML/index.html
+++ b/HTML/index.html
@@ -65,6 +65,19 @@
         <button>Hier vereinbaren</button>
     </section>
 
+    <section id="Kontakt">
+        <hr>
+        <h2>Kontakt</h2>
+        <form>
+            <input type="email" tabindex="1" placeholder="E-Mail"><br>
+            <input type="text" tabindex="2" placeholder="Betreff"><br>
+            <textarea tabindex="3" placeholder="Nachricht"></textarea><br>
+            <button>Senden</button>
+        </form>
+
+    </section>
+
+
  <section id="footer">
 
     <ul id="Copyright">
