--- a/HTML/index.html
+++ b/HTML/index.html
@@ -42,10 +42,10 @@
         <img src="images/büroservice.JPG" alt="büroserviceBild">
         <h2>Buchhaltung</h2>
         <p>Kein Zettelchaos mehr in Ihren steuerlichen Unterlagen.<br>
-           Durch das digitalsieren, ordnen und buchen von Belegen <br>
+           Durch das Digitalisieren, Ordnen und Buchen von Belegen <br>
            haben Sie nicht nur weniger Unordnung, sondern jederzeit <br>
-           einen Überblick über Ihre betriebswirtschafliche AUfstellung<br>
-           und deutlicher Kosteinsparung beim Steuerberater</p>
+           einen Überblick über Ihre betriebswirtschafliche Aufstellung<br>
+           und deutliche Kosteinsparung beim Steuerberater.</p>
     </section>
 
     <section id="büroservice">
@@ -53,7 +53,7 @@
         <img src="images/büroservice.JPG" alt="büroserviceBild">
         <h2>Büroservice</h2>
         <p>Sparen Sie Zeit und Mietkosten durch unseren Büroservice. <br>
-           Ich digitalsiere, priorisiere und leite auf Wunsch tägl. <br>
+           Ich digitalisiere, priorisiere und leite auf Wunsch täglich <br>
            die Post an Ihre Wunschadresse weiter.</p>
     </section>
 
@@ -70,10 +70,10 @@
         <hr>
         <img src="images/terminplanung.JPG" alt="terminplanungBild">
         <h2>Terminplanung</h2>
-        <p>Steigern Sie ihre effektivität. Ich koordiniere und <br>
-           terminiere gerne Ihre Kunden. Gerade in Druckphasen <br>
+        <p>Steigern Sie Ihre Effektivität. Ich koordiniere und <br>
+           terminiere gern Ihre Kunden. Gerade in Druckphasen <br>
            verringern Sie damit teure Zeitlücken. Beraten und <br>
-           verkaufen Sie mehr durch erhöhen der Terminanzahl. 
+           verkaufen Sie mehr durch Erhöhen Ihrer Terminanzahl. 
         </p>
         
     </section>
